Some refactoring and using DTOs for API response